tests/machine/x/fortran/bool_chain.error
error: gfortran: exit status 1
/workspace/mochi/tests/machine/x/fortran/bool_chain.f90:9:11:

    9 |     boom = .true.
      |           1
Warning: Extension: Conversion from LOGICAL(4) to INTEGER(4) at (1)
/workspace/mochi/tests/machine/x/fortran/bool_chain.f90:4:45:

    4 |   print *, ((((1 < 2)) .and. ((2 > 3))) .and. boom())
      |                                             1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
/workspace/mochi/tests/machine/x/fortran/bool_chain.f90:5:63:

    5 |   print *, (((((1 < 2)) .and. ((2 < 3))) .and. ((3 > 4))) .and. boom())
      |                                                               1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)

